<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginBottom="24dp">

    <!-- componentes a ver: EditText, radiobuttons, strings resources -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/calculator_title"/>

    <EditText
        android:id="@+id/etNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_first_number"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginBottom="24dp"
        />

    <EditText
        android:id="@+id/etNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_second_number"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginBottom="24dp"
        />

    <RadioGroup
        android:id="@+id/rgOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <RadioButton
            android:id="@+id/rbAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_add"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbSubtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_subtract"/>

        <RadioButton
            android:id="@+id/rbMultiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_multiply"/>

        <RadioButton
            android:id="@+id/rbDivide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_divide"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_calculate"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_result"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

</LinearLayout>